# CheckWarning.cmake

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yaml  test.yaml
cmake/: CheckWarning.cmake  CheckWarningConfig.cmake  FindAssertion.cmake  devel_target_check_warning.cmake  hello_world.cmake  target_check_warning.cmake
test/: BuildSample.cmake  CMakeLists.txt  CheckWarningTest.cmake  check_warning.cmake  project_helper.cmake  test.bash  test_add_check_warning.cmake  test_all.bash  test_get_warning_flags.cmake  test_target_check_warning.cmake
test/devel_target_check_warning/: CMakeLists.txt  main.cpp  test.bash
test/hello_world/: CMakeLists.txt  test.bash
test/sample/: Build.cmake  CMakeLists.txt  main.c
test/sample/include/: ok.hpp  success.h
test/sample/src/: main.c
